--- a/src/main/res/layout/activity_history_level.xml
+++ b/src/main/res/layout/activity_history_level.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2017 - 2021  Byte Sculptor Software  - All Rights Reserved
+  ~ Copyright (c) 2021  Byte Sculptor Software  - All Rights Reserved
   ~
   ~ All information contained herein is and remains the property of Byte Sculptor Software.
   ~ Unauthorized copying of this file, via any medium, is strictly prohibited unless prior
@@ -20,12 +20,12 @@
         android:id="@+id/chartLevel"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/toggleButtonGroup"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/toggleButtonGroup"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,85 +33,91 @@
         android:id="@+id/toggleButtonGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:selectionRequired="true"
         app:singleSelection="true">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt1"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_2h"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@+id/bt2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bt2"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt2"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_8h"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@+id/bt3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt1" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bt3"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt1" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt3"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_1d"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@+id/bt4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt2" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bt4"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt2" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt4"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_3d"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@+id/bt5"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt3" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bt5"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt3" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt5"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_7d"
             android:textAllCaps="false"
-            app:layout_constraintBottom_toTopOf="@+id/bt6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt4" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bt6"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt4" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt6"
             style="@style/HistoryButtonGroup"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/button_group_width"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:text="@string/_10d"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt5" />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt5" />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
