--- a/src/main/res/values-night/colors.xml
+++ b/src/main/res/values-night/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2017 - 2021  Byte Sculptor Software  - All Rights Reserved
+  ~ Copyright (c)  2021 Byte Sculptor Software - All Rights Reserved
   ~
   ~ All information contained herein is and remains the property of Byte Sculptor Software.
   ~ Unauthorized copying of this file, via any medium, is strictly prohibited unless prior
@@ -40,5 +40,9 @@
     <color name="colorLimitBoxesBackgroundStroke">#414141</color>
 
     <color name="colorButton">#686868</color>
+
+    <!-- page indicator -->
+    <color name="page_indicator_dot">@color/colorWidgetBackground</color>
+    <color name="page_indicator_dotSelected">@color/colorGood</color>
 
 </resources>
