--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2017 - 2021  Byte Sculptor Software  - All Rights Reserved
+  ~ Copyright (c)  2021 Byte Sculptor Software - All Rights Reserved
   ~
   ~ All information contained herein is and remains the property of Byte Sculptor Software.
   ~ Unauthorized copying of this file, via any medium, is strictly prohibited unless prior
@@ -41,5 +41,9 @@
     <color name="colorLimitBoxesBackgroundStroke">@color/colorWidgetBackgroundStroke</color>
 
     <color name="colorButton">#121212</color>
+
+    <!-- page indicator -->
+    <color name="page_indicator_dot">@color/colorWidgetBackgroundStroke</color>
+    <color name="page_indicator_dotSelected">@color/colorGood</color>
 
 </resources>
